Validate maximum item length
